<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.plf.action</groupId>
	<artifactId>netty-action</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>netty-action-rpc</module>
		<module>netty-action-websocket</module>
		<module>netty-action-disruptor</module>
		<module>netty-file-upload</module>
        <module>netty-boot-websocket</module>
    </modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
			    <groupId>io.netty</groupId>
			    <artifactId>netty-all</artifactId>
			    <version>5.0.0.Alpha2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
